syntax = "proto3";

package binary;

option go_package = "/pkg-bin/storage";

message ApiTradesBlock {
  repeated ApiTrade Trades = 1;
}

message ApiTrade {
    string Tx = 1;
    int64 Date = 2;
    int64 Timestamp = 3;
    string Chain = 4;
    uint64 Blocknumber = 5;
    string Pair = 6;
    string Amount0 = 7;
    string Amount1 = 8;
    bool Buy = 9;
    double PriceA = 10;
    double PriceAUSD = 11;
    double PriceB = 12;
    double PriceBUSD = 13;
    bool Bot = 14;
    string Wallet = 15;
    int32 Order = 16;
    double ValueUsd = 17;
    uint64 Ticker = 18;
  }
  